...
            android:tint="@color/gray_4d4d4d"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_search_black_24dp"/>

        <TextView
            android:id="@+id/itemAddressSearchName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_marginStart="@dimen/spacing_normal"
            android:textColor="@color/gray_4d4d4d"
            app:layout_constraintLeft_toRightOf="@+id/itemAddressSearchSearchImage"
...
