<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_normal">

    <com.rdireito.ridelight.feature.widget.AddressView
        android:id="@+id/ridePickupAddressView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/address_view_min_height"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        app:indicatorText="@string/pickup"
        app:indicatorIcon="@drawable/ic_pickup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rideDropoffAddressView"/>

    <com.rdireito.ridelight.feature.widget.AddressView
        android:id="@+id/rideDropoffAddressView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/address_view_min_height"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        app:indicatorText="@string/dropoff"
        app:indicatorIcon="@drawable/ic_dropoff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pickupActionContainer"/>

    <FrameLayout
        android:id="@+id/dropoffActionContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:foreground="?selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height"
            android:text="@string/confirm_dropoff"
            android:textAllCaps="true"
            android:clickable="false"
            android:background="@color/colorPrimary"
            android:theme="@style/Button.ColorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/pickupActionContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:foreground="?selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height"
            android:text="@string/confirm_pickup"
            android:textAllCaps="true"
            android:clickable="false"
            android:background="@color/colorPrimary"
            android:theme="@style/Button.ColorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
