<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rdireito.ridelight.feature.ride.ui.RideActivity">

    <FrameLayout
        android:id="@+id/rideMapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.rdireito.ridelight.feature.ride.ui.widget.RideAddressCardView
        android:id="@+id/rideAddressView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.rdireito.ridelight.feature.ride.ui.widget.RideProductView
        android:id="@+id/rideProductView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
