<resources>
    <string name="app_name">Ridelight</string>
    <string name="input_address_hint">Input address</string>
    <string name="confirm_dropoff">Confirm dropoff</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="request_ride">Request ride</string>
    <string name="dropoff">Drop off</string>
    <string name="pickup">Pickup</string>
    <string name="location_permission_rationale">We need your permission to define your location!</string>
    <string name="location_permission_never_ask_again">Please, provide us your location permission on Settings.</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="select_address">Please, select an address.</string>
    <string name="product_error">An error has ocurred, we\'re sorry! :/</string>
    <string name="try_again">Try again</string>
</resources>
