...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rideProductsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
...
